# xininfo

./: INSTALL.md  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
doc/: xininfo.1  xininfo.markdown
source/: xininfo.c
